# proof-of-solvency

./: .gitignore
circom/: build.sh  gen_input.py  merkle_tree.circom  proof.json
circom/results/: time.txt
circom/results/10/: input.json  merkle_tree.circom  proof.json  public.json  verification_key.json
circom/results/10/merkle_tree_js/: merkle_tree.wasm
circom/results/11/: input.json  merkle_tree.circom  proof.json  public.json  verification_key.json
circom/results/11/merkle_tree_cpp/: Makefile
circom/results/11/merkle_tree_js/: merkle_tree.wasm
circom/results/12/: gen_proof.sh  gen_witness.sh  input.json  merkle_tree.circom  proof.json  public.json  verification_key.json
circom/test/: input.json  proof.json  public.json  test.circom  test.r1cs  test.sym  verification_key.json  witness.wtns
circom/test_js/: test.wasm
kzg-solvency/examples/: my_kzg_solvency.rs
kzg-solvency/src/: kzg.rs  lib.rs  misc.rs  prover.rs  utils.rs
merkle-sum-tree/: Cargo.toml  commitment.json  proofs.json
merkle-sum-tree/src/: merkle_tree.rs  prover.rs  traits.rs  verifier.rs
proof_of_assets/: Cargo.toml  signatures.json
proof_of_assets/src/: prover.rs  verifier.rs
